// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BarChartVertical > renders correctly 1`] = `
<div
  class="bar-chart-vertical fill-height full-width"
>
  <svg
    height="0"
    style="display: block;"
    viewBox="0,0,0,0"
    width="0"
  >
    <g
      class="vertical-axes"
    >
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(30,10)"
      >
        <g>
          <text
            dx="-4"
            dy="22"
            fill="#FFF"
            font-family="Open Sans, sans-serif"
            font-size="12"
            font-weight="500"
            text-anchor="right"
          >
            string
          </text>
        </g>
        <path
          class="domain"
          stroke="currentColor"
        />
      </g>
    </g>
    <g
      class="bottom-axis"
    >
      <g
        class="bottom-axis-container"
        clip-path="url(#bottomAxisClipPath)"
        transform="translate(34,10)"
      >
        <defs>
          <clippath
            class="bottomAxisClipPath"
            id="bottomAxisClipPath"
          >
            <rect
              height="0"
              width="0"
              x="0"
            />
            <rect
              height="30"
              width="7"
              x="-7"
              y="0"
            />
          </clippath>
          <lineargradient
            class="leftFadient"
            id="leftFadient"
          >
            <stop
              offset="0%"
              stop-color="#101010"
              stop-opacity="1"
            />
            <stop
              offset="100%"
              stop-color="#101010"
              stop-opacity="0"
            />
          </lineargradient>
          <lineargradient
            class="rightFadient"
            id="rightFadient"
          >
            <stop
              offset="0%"
              stop-color="#101010"
              stop-opacity="0"
            />
            <stop
              offset="100%"
              stop-color="#101010"
              stop-opacity="1"
            />
          </lineargradient>
        </defs>
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          line-height="50px"
          style="font-family: "Open Sans", sans-serif; color: rgb(0, 0, 0);"
          text-anchor="middle"
          transform="translate(0, 0)"
        >
          <path
            class="domain"
            d="M0.5,0.5H0.5"
            stroke="currentColor"
          />
        </g>
        <rect
          class="leftFadient"
          height="30"
          style="fill: url("#leftFadient");"
          width="14"
          x="-7"
          y="0"
        />
        <rect
          class="rightFadient"
          height="30"
          style="fill: url("#rightFadient");"
          width="14"
          x="-7"
          y="0"
        />
      </g>
    </g>
    <g
      class="graph-plot"
      clip-path="url(#clip)"
      transform="translate(34,10)"
    >
      <defs>
        <clippath
          id="clip"
        >
          <rect
            height="0"
            width="0"
          />
        </clippath>
      </defs>
      <g
        class="bars-wrapper"
      >
        <mask
          id="verticalBarHoverMask-"
        >
          <rect
            height="0"
            id="verticalBarMaskOverlay-"
            style="fill: white; opacity: 0.5;"
            width="0"
            x="0"
            y="0"
          />
          <rect
            height="0"
            id="verticalBarHoverMaskRect-"
            style="fill: white; opacity: 1;"
            width="0"
            x="0"
            y="0"
          />
        </mask>
      </g>
      <g>
        <line
          class="targetgoal"
          stroke-dasharray="0"
          style="vector-effect: non-scaling-stroke; stroke-width: 2px; stroke: rgb(255, 255, 255);"
          x1="0"
          x2="0"
          y1="0"
          y2="0"
        />
        <line
          class="targetgoal"
          stroke-dasharray="0"
          style="vector-effect: non-scaling-stroke; stroke-width: 15px; stroke: transparent;"
          x1="0"
          x2="0"
          y1="0"
          y2="0"
        />
      </g>
      <g
        class="area-wrapper"
      >
        <line
          class="trendline"
          style="vector-effect: non-scaling-stroke; stroke-dasharray: 5 5; stroke-width: 2px; stroke: rgb(0, 0, 0);"
          x1="0"
          x2="0"
          y1="0"
          y2="0"
        />
        <line
          class="trendline"
          style="vector-effect: non-scaling-stroke; stroke-width: 15; stroke: transparent;"
          x1="0"
          x2="0"
          y1="0"
          y2="0"
        />
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      style="stroke-dasharray: 5 5; color: rgb(158, 158, 158);"
      text-anchor="end"
      transform="translate(34,10)"
    >
      <g
        class="grid"
      />
      <path
        class="domain"
        stroke="currentColor"
      />
    </g>
  </svg>
</div>
`;

exports[`BarChartVertical > renders correctly with areaHighlightsEnabled 1`] = `
<div
  class="bar-chart-vertical fill-height full-width"
>
  <svg
    height="0"
    style="display: block;"
    viewBox="0,0,0,0"
    width="0"
  >
    <g
      class="vertical-axes"
    >
      <g
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
        transform="translate(30,10)"
      >
        <g>
          <text
            dx="-4"
            dy="22"
            fill="#FFF"
            font-family="Open Sans, sans-serif"
            font-size="12"
            font-weight="500"
            text-anchor="right"
          >
            string
          </text>
        </g>
        <path
          class="domain"
          stroke="currentColor"
        />
      </g>
    </g>
    <g
      class="bottom-axis"
    >
      <g
        class="bottom-axis-container"
        clip-path="url(#bottomAxisClipPath)"
        transform="translate(34,10)"
      >
        <defs>
          <clippath
            class="bottomAxisClipPath"
            id="bottomAxisClipPath"
          >
            <rect
              height="0"
              width="0"
              x="0"
            />
            <rect
              height="30"
              width="7"
              x="-7"
              y="0"
            />
          </clippath>
          <lineargradient
            class="leftFadient"
            id="leftFadient"
          >
            <stop
              offset="0%"
              stop-color="#101010"
              stop-opacity="1"
            />
            <stop
              offset="100%"
              stop-color="#101010"
              stop-opacity="0"
            />
          </lineargradient>
          <lineargradient
            class="rightFadient"
            id="rightFadient"
          >
            <stop
              offset="0%"
              stop-color="#101010"
              stop-opacity="0"
            />
            <stop
              offset="100%"
              stop-color="#101010"
              stop-opacity="1"
            />
          </lineargradient>
        </defs>
        <g
          class="x-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          line-height="50px"
          style="font-family: "Open Sans", sans-serif; color: rgb(0, 0, 0);"
          text-anchor="middle"
          transform="translate(0, 0)"
        >
          <path
            class="domain"
            d="M0.5,0.5H0.5"
            stroke="currentColor"
          />
        </g>
        <rect
          class="leftFadient"
          height="30"
          style="fill: url("#leftFadient");"
          width="14"
          x="-7"
          y="0"
        />
        <rect
          class="rightFadient"
          height="30"
          style="fill: url("#rightFadient");"
          width="14"
          x="-7"
          y="0"
        />
      </g>
    </g>
    <g
      class="graph-plot"
      clip-path="url(#clip)"
      transform="translate(34,10)"
    >
      <defs>
        <clippath
          id="clip"
        >
          <rect
            height="0"
            width="0"
          />
        </clippath>
      </defs>
      <g
        class="bars-wrapper"
      >
        <mask
          id="verticalBarHoverMask-"
        >
          <rect
            height="0"
            id="verticalBarMaskOverlay-"
            style="fill: white; opacity: 0.5;"
            width="0"
            x="0"
            y="0"
          />
          <rect
            height="0"
            id="verticalBarHoverMaskRect-"
            style="fill: white; opacity: 1;"
            width="0"
            x="0"
            y="0"
          />
        </mask>
      </g>
      <g>
        <line
          class="targetgoal"
          stroke-dasharray="0"
          style="vector-effect: non-scaling-stroke; stroke-width: 2px; stroke: rgb(255, 255, 255);"
          x1="0"
          x2="0"
          y1="0"
          y2="0"
        />
        <line
          class="targetgoal"
          stroke-dasharray="0"
          style="vector-effect: non-scaling-stroke; stroke-width: 15px; stroke: transparent;"
          x1="0"
          x2="0"
          y1="0"
          y2="0"
        />
      </g>
      <g
        class="area-wrapper"
      >
        <line
          class="trendline"
          style="vector-effect: non-scaling-stroke; stroke-dasharray: 5 5; stroke-width: 2px; stroke: rgb(0, 0, 0);"
          x1="0"
          x2="0"
          y1="0"
          y2="0"
        />
        <line
          class="trendline"
          style="vector-effect: non-scaling-stroke; stroke-width: 15; stroke: transparent;"
          x1="0"
          x2="0"
          y1="0"
          y2="0"
        />
      </g>
    </g>
    <g
      fill="none"
      font-family="sans-serif"
      font-size="10"
      style="stroke-dasharray: 5 5; color: rgb(158, 158, 158);"
      text-anchor="end"
      transform="translate(34,10)"
    >
      <g
        class="grid"
      />
      <path
        class="domain"
        stroke="currentColor"
      />
    </g>
    <g
      class="area-highlights"
    />
  </svg>
</div>
`;
